--- a/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
     "UO2_03[\"isoName\"] = ['U235', 'U238', 'O16']\n",
     "\n",
     "# The number densities of fissionable isotopes and oxygen\n",
-    "UO2_03[\"numDen\"] = [molFrU[0] * rho, molFrU[1] * rho, 2 * rho]\n",
+    "UO2_03[\"numDen\"] = np.array([molFrU[0] * rho, molFrU[1] * rho, 2 * rho])\n",
     "\n",
     "# Prepare for sigma-zero iterations\n",
     "sigTtab = prepareIntoND(\n",
@@ -912,7 +912,7 @@
     "    #print(\"i =\", i, \"size =\", size)\n",
     "    sig0tab[i, :size] = np.array(eval(f'hdf5_{UO2_03[\"isoName\"][i]}').get('sig0_G').get('sig0'))\n",
     "\n",
-    "aDen = np.array(UO2_03[\"numDen\"])\n",
+    "aDen = UO2_03[\"numDen\"]\n",
     "\n",
     "# SigEscape -- escape cross section, for simple convex objects (such as\n",
     "# plates, spheres, or cylinders) is given by S/(4V), where V and S are the\n",
@@ -1027,7 +1027,7 @@
     "    matName = f\"macro421_UO2_03_{round(UO2_03['temp'])}K\"  # name of the file with a temperature index\n",
     "\n",
     "# Change the units of number density from 1/(barn*cm) to 1/cm2\n",
-    "UO2_03['numDen'] = np.array(UO2_03['numDen'])*1e24\n",
+    "UO2_03['numDen'] = UO2_03['numDen']*1e24\n",
     "\n",
     "# Finally create the file with macroscopic cross sections\n",
     "writeMacroXS(UO2_03, matName)\n",
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "(6, 421)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,13 +1057,6 @@
    "source": [
     "sigF_O16[0].shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
