--- a/ReactorPhysics_Python/02.Macro.XS.421g/testH2OU.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testH2OU.ipynb
@@ -966,7 +966,8 @@
     "U235_sig2 = np.array(hdf5_U235.get('sig2_G').get('sig2'))\n",
     "\n",
     "H2OU[\"Sig2\"] = np.transpose(H01_sig2 * aDen[0] + O16_sig2 * aDen[1] + U235_sig2 * aDen[2])\n",
-    "H2OU[\"SigT\"] = H2OU[\"SigC\"] + H2OU[\"SigL\"] + H2OU[\"SigF\"] + np.sum(H2OU_SigS[0], axis=1) + np.sum(H2OU[\"Sig2\"], axis=1)\n",
+    "H2OU[\"SigT\"] = H2OU[\"SigC\"] + H2OU[\"SigL\"] + H2OU[\"SigF\"] + \\\n",
+    "                np.sum(H2OU_SigS[0], axis=0) + np.sum(H2OU[\"Sig2\"], axis=0)\n",
     "\n",
     "# Add SigS matrices to dictionary\n",
     "H2OU['SigS'] = {}\n",
