--- a/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,9 +711,9 @@
     "            '',\n",
     "            'Macroscopic cross sections for water solution of boric acid',\n",
     "            f'UO2 temperature:    {s_struct[\"temp\"]:.1f} K',\n",
-    "            #f'UO2 porosity:       {s_struct[\"p\"]:.1f} MPa',\n",
-    "            f'UO2 density:        {s_struct[\"den\"]:.5f} g/cm3'\n",
-    "           # f'Enrichment by U235: {s_struct[\"bConc\"]*1e6:.1f} ppm'\n",
+    "            f'UO2 porosity:       {s_struct[\"por\"]:.1f}',\n",
+    "            f'UO2 density:        {s_struct[\"den\"]:.3f} g/cm3',\n",
+    "            f'Enrichment by U235: {s_struct[\"molEnrich\"]:.1f} mol'\n",
     "        ]\n",
     "\n",
     "        # Write the header as attributes of the root group\n",
@@ -773,6 +773,10 @@
     "            del f[\"p\"]\n",
     "        if \"Uconc\" in f:\n",
     "            del f[\"Uconc\"]\n",
+    "        if \"por\" in f:\n",
+    "            del f[\"por\"]\n",
+    "        if \"molEnrich\" in f:\n",
+    "            del f[\"molEnrich\"]\n",
     "\n",
     "        f.create_dataset('fissile', data=1)\n",
     "        if np.all(s_struct['SigP'][0] == 0):\n",
@@ -794,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -804,11 +808,17 @@
       "File 'micro_U_235__900K.h5' has been read in.\n",
       "File 'micro_U_238__900K.h5' has been read in.\n",
       "File 'micro_O_016__900K.h5' has been read in.\n",
-      "Sigma-zero iterations. \n",
+      "Sigma-zero iterations. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Done.\n",
       "Interpolation of microscopic cross sections for the found sigma-zeros.\n",
       "Done.\n",
-      "Write macroscopic cross sections to the file: macro421_UO2_03__600K.h5\n",
+      "Write macroscopic cross sections to the file: macro421_UO2_03__900K.h5\n",
       "Done.\n"
      ]
     }
@@ -854,7 +864,7 @@
     "hdf5_O16  = h5py.File(micro_XS_path + '/micro_O_016__900K.h5', 'r') # INPUT\n",
     "print(f\"File 'micro_O_016__900K.h5' has been read in.\")\n",
     "\n",
-    "UO2_03[\"temp\"] = 600                                                # INPUT\n",
+    "UO2_03[\"temp\"] = 900                                                # INPUT\n",
     "UO2_03[\"eg\"] = np.array(hdf5_U235.get('en_G').get('eg'))\n",
     "UO2_03['ng'] = 421\n",
     "\n",
@@ -873,8 +883,8 @@
     "molFrU = np.array([molEnrich, 1 - molEnrich])\n",
     "\n",
     "# Mass of one \"average\" UO2 molecule in atomic unit mass [a.u.m.]\n",
-    "UO2_03[\"aw\"] = hdf5_U235.attrs.get('aw')*molFrU[0]*molFrU[0] + \\\n",
-    "               hdf5_U238.attrs.get('aw')*molFrU[1] +            \\\n",
+    "UO2_03[\"aw\"] = hdf5_U235.attrs.get('aw')*molFrU[0] + \\\n",
+    "               hdf5_U238.attrs.get('aw')*molFrU[1] + \\\n",
     "               hdf5_O16 .attrs.get('aw')*2.0\n",
     "\n",
     "# Path to material properties\n",
@@ -1009,7 +1019,7 @@
     "                    hdf5_O16 .get('sig2_G').get('sig2') * aDen[2]   )\n",
     "\n",
     "UO2_03[\"SigT\"] = UO2_03[\"SigC\"] + UO2_03[\"SigL\"] + UO2_03[\"SigF\"] +     \\\n",
-    "            np.sum(UO2_03_SigS[0], axis=1) + np.sum(UO2_03[\"Sig2\"], axis=1)\n",
+    "            np.sum(UO2_03_SigS[0], axis=0) + np.sum(UO2_03[\"Sig2\"], axis=0)\n",
     "\n",
     "# Add SigS matrices to dictionary\n",
     "UO2_03['SigS'] = {}\n",
@@ -1029,6 +1039,9 @@
     "# Change the units of number density from 1/(barn*cm) to 1/cm2\n",
     "UO2_03['numDen'] = UO2_03['numDen']*1e24\n",
     "\n",
+    "UO2_03[\"por\"] = por*100\n",
+    "UO2_03[\"molEnrich\"] = molEnrich*100\n",
+    "\n",
     "# Finally create the file with macroscopic cross sections\n",
     "writeMacroXS(UO2_03, matName)\n",
     "\n",
@@ -1040,22 +1053,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0430999999999998e-23\n",
+      "6.281699063797394\n",
+      "0.023269827400668696\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(6, 421)"
+       "array(269.95039351)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sigF_O16[0].shape"
+    "UO2_03[\"den\"] = fuel[\"rho\"] * 1e-3 * (1 - por)  # [g/cm3]\n",
+    "rho = UO2_03[\"den\"]*1.0e-24                     # [g/(barn*cm)]\n",
+    "print(rho)\n",
+    "rho = rho / 1.660538e-24                        # [(a.u.m.)/(barn*cm)]\n",
+    "print(rho)\n",
+    "rho = rho / UO2_03[\"aw\"] \n",
+    "\n",
+    "print(rho)\n",
+    "UO2_03[\"aw\"] "
    ]
   }
  ],
