--- a/ReactorPhysics_Python/06.Monte.Carlo/testMonteCarloPWR.ipynb
+++ b/ReactorPhysics_Python/06.Monte.Carlo/testMonteCarloPWR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['SigC', 'SigF', 'SigL', 'SigP', 'SigT', 'aw', 'chi', 'den', 'eg', 'fissile', 'isoName', 'ng', 'numDen', 'sig0', 'sig2_G', 'sigS_G', 'temp'])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def hdf2dict(file_name):\n",
     "    # Define the dictionary to store the datasets\n",
@@ -64,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -73,21 +62,37 @@
      "text": [
       "File 'macro421_UO2_03__900K.h5' has been read in.\n",
       "File 'macro421_Zry__600K.h5' has been read in.\n",
-      "File 'macro421_H2OB__600K.h5' has been read in.\n"
+      "File 'macro421_H2OB__600K.h5' has been read in.\n",
+      "Inactive cycle =   1/ 10; k-eff cycle = 1.03082; numNeutrons =  18\n",
+      "Inactive cycle =   2/ 10; k-eff cycle = 1.44096; numNeutrons =  17\n",
+      "Inactive cycle =   3/ 10; k-eff cycle = 1.15601; numNeutrons =  14\n",
+      "Inactive cycle =   4/ 10; k-eff cycle = 0.93947; numNeutrons =  11\n",
+      "Inactive cycle =   5/ 10; k-eff cycle = 0.95592; numNeutrons =  10\n",
+      "Inactive cycle =   6/ 10; k-eff cycle = 1.63477; numNeutrons =  17\n",
+      "Inactive cycle =   7/ 10; k-eff cycle = 1.46943; numNeutrons =  16\n",
+      "Inactive cycle =   8/ 10; k-eff cycle = 1.20671; numNeutrons =  14\n",
+      "Inactive cycle =   9/ 10; k-eff cycle = 1.09126; numNeutrons =  12\n",
+      "Inactive cycle =  10/ 10; k-eff cycle = 1.26029; numNeutrons =  13\n",
+      "Active cycle =   1/ 10; k-eff cycle = 1.17626; numNeutrons =  12; k-eff expected = 0.00000; sigma = 0.00000\n",
+      "Active cycle =   2/ 10; k-eff cycle = 0.94761; numNeutrons =   9; k-eff expected = 0.47380; sigma = 0.47380\n",
+      "Active cycle =   3/ 10; k-eff cycle = 1.22187; numNeutrons =  14; k-eff expected = 0.40729; sigma = 0.40729\n",
+      "Active cycle =   4/ 10; k-eff cycle = 0.92967; numNeutrons =   9; k-eff expected = 0.23242; sigma = 0.23242\n",
+      "Active cycle =   5/ 10; k-eff cycle = 1.14957; numNeutrons =  12; k-eff expected = 0.22991; sigma = 0.22991\n",
+      "Active cycle =   6/ 10; k-eff cycle = 1.20249; numNeutrons =  14; k-eff expected = 0.20042; sigma = 0.20042\n",
+      "Active cycle =   7/ 10; k-eff cycle = 1.02845; numNeutrons =  12; k-eff expected = 0.14692; sigma = 0.14692\n",
+      "Active cycle =   8/ 10; k-eff cycle = 1.64620; numNeutrons =  18; k-eff expected = 0.20578; sigma = 0.20578\n",
+      "Active cycle =   9/ 10; k-eff cycle = 0.95122; numNeutrons =  12; k-eff expected = 0.10569; sigma = 0.10569\n"
      ]
     },
     {
-     "ename": "AxisError",
-     "evalue": "axis 1 is out of bounds for array of dimension 1",
+     "ename": "IndexError",
+     "evalue": "index 10 is out of bounds for axis 0 with size 10",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 70\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[39m# Main (power) iteration loop\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[39mfor\u001b[39;00m iCycle \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, numCycles_inactive \u001b[39m+\u001b[39m numCycles_active \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[1;32m     67\u001b[0m \n\u001b[1;32m     68\u001b[0m     \u001b[39m# Normalize the weights of the neutrons to make the total weight equal to\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39m# numNeutrons_born (equivalent to division by keff_cycle)\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     weight \u001b[39m=\u001b[39m (weight \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39;49msum(weight, axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, keepdims\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)) \u001b[39m*\u001b[39m numNeutrons_born\n\u001b[1;32m     71\u001b[0m     weight0 \u001b[39m=\u001b[39m weight\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m     73\u001b[0m     \u001b[39m#----------------------------------------------------------------------\u001b[39;00m\n\u001b[1;32m     74\u001b[0m     \u001b[39m# Loop over neutrons\u001b[39;00m\n",
-      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/envs/python310/lib64/python3.10/site-packages/numpy/core/fromnumeric.py:2298\u001b[0m, in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2295\u001b[0m         \u001b[39mreturn\u001b[39;00m out\n\u001b[1;32m   2296\u001b[0m     \u001b[39mreturn\u001b[39;00m res\n\u001b[0;32m-> 2298\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapreduction(a, np\u001b[39m.\u001b[39;49madd, \u001b[39m'\u001b[39;49m\u001b[39msum\u001b[39;49m\u001b[39m'\u001b[39;49m, axis, dtype, out, keepdims\u001b[39m=\u001b[39;49mkeepdims,\n\u001b[1;32m   2299\u001b[0m                       initial\u001b[39m=\u001b[39;49minitial, where\u001b[39m=\u001b[39;49mwhere)\n",
-      "File \u001b[0;32m~/envs/python310/lib64/python3.10/site-packages/numpy/core/fromnumeric.py:86\u001b[0m, in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     84\u001b[0m             \u001b[39mreturn\u001b[39;00m reduction(axis\u001b[39m=\u001b[39maxis, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpasskwargs)\n\u001b[0;32m---> 86\u001b[0m \u001b[39mreturn\u001b[39;00m ufunc\u001b[39m.\u001b[39;49mreduce(obj, axis, dtype, out, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mpasskwargs)\n",
-      "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 222\u001b[0m\n\u001b[1;32m    219\u001b[0m keff_active_cycle[iActive\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m keff_cycle\n\u001b[1;32m    221\u001b[0m \u001b[39m# k-effective of the problem\u001b[39;00m\n\u001b[0;32m--> 222\u001b[0m keff_expected[iActive] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmean(keff_active_cycle[\u001b[39m1\u001b[39m:iActive \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m])\n\u001b[1;32m    224\u001b[0m \u001b[39m# Standard deviation of k-effective\u001b[39;00m\n\u001b[1;32m    225\u001b[0m sigma_keff[iActive] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msqrt(\n\u001b[1;32m    226\u001b[0m     np\u001b[39m.\u001b[39msum((keff_active_cycle[\u001b[39m1\u001b[39m:iActive \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m keff_expected[iActive]) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m) \u001b[39m/\u001b[39m \u001b[39mmax\u001b[39m(iActive \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m) \u001b[39m/\u001b[39m iActive)\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 10 is out of bounds for axis 0 with size 10"
      ]
     }
    ],
@@ -122,7 +127,7 @@
     "print(f\"File 'macro421_H2OB__600K.h5' has been read in.\")\n",
     "\n",
     "# Define the majorant: the maximum total cross-section vector\n",
-    "SigTmax = np.max([fuel['SigT'], clad['SigT'], cool['SigT']])\n",
+    "SigTmax = np.max(np.vstack((fuel[\"SigT\"], clad[\"SigT\"], cool[\"SigT\"])), axis=0)\n",
     "\n",
     "# Number of energy groups\n",
     "ng = fuel['ng']\n",
@@ -205,15 +210,15 @@
     "            # Find the total and scattering cross sections\n",
     "            if 0.9 < x[iNeutron] < 2.7:  # INPUT\n",
     "                SigA = fuel['SigF'][iGroup[iNeutron]] + fuel['SigC'][iGroup[iNeutron]] + fuel['SigL'][iGroup[iNeutron]]\n",
-    "                SigS = fuel['SigS'][0][iGroup[iNeutron], :].reshape(-1, 1)\n",
-    "                SigP = fuel['SigP'][iGroup[iNeutron]]\n",
+    "                SigS = fuel[\"sigS_G\"][\"sparse_SigS[0]\"][iGroup[iNeutron], :].reshape(-1, 1)\n",
+    "                SigP = fuel['SigP'][0, iGroup[iNeutron]]\n",
     "            elif x[iNeutron] < 0.7 or x[iNeutron] > 2.9:  # INPUT\n",
     "                SigA = cool['SigC'][iGroup[iNeutron]] + cool['SigL'][iGroup[iNeutron]]\n",
-    "                SigS = cool['SigS'][0][iGroup[iNeutron], :].reshape(-1, 1)\n",
+    "                SigS = cool[\"sigS_G\"][\"sparse_SigS[0]\"][iGroup[iNeutron], :].reshape(-1, 1)\n",
     "                SigP = 0\n",
     "            else:\n",
     "                SigA = clad['SigC'][iGroup[iNeutron]] + clad['SigL'][iGroup[iNeutron]]\n",
-    "                SigS = clad['SigS'][0][iGroup[iNeutron], :].reshape(-1, 1)\n",
+    "                SigS = clad[\"sigS_G\"][\"sparse_SigS[0]\"][iGroup[iNeutron], :].reshape(-1, 1)\n",
     "                SigP = 0\n",
     "\n",
     "            # Find the other cross sections ...\n",
@@ -256,31 +261,94 @@
     "\n",
     "        # End of neutron random walk cycle: from emission to absorption\n",
     "    # End of loop over neutrons\n",
+    "    #-------------------------------------------------------------------------------------------\n",
+    "    # Russian roulette\n",
+    "    for iNeutron in range(numNeutrons):\n",
+    "        terminateP = 1 - weight[iNeutron] / weight0[iNeutron]\n",
+    "        if terminateP >= np.random.rand():\n",
+    "            weight[iNeutron] = 0  # killed\n",
+    "        elif terminateP > 0:\n",
+    "            weight[iNeutron] = weight0[iNeutron]  # restore the weight\n",
     "\n",
+    "    #-------------------------------------------------------------------------------------------\n",
+    "    # Clean up absorbed or killed neutrons\n",
+    "    indices = np.nonzero(weight)\n",
+    "    x = x[indices]\n",
+    "    y = y[indices]\n",
+    "    iGroup = iGroup[indices]\n",
+    "    weight = weight[indices]\n",
+    "    numNeutrons = weight.shape[0]\n",
     "\n",
-    "fuel.close()\n",
-    "clad.close()\n",
-    "cool.close()\n"
+    "    #-------------------------------------------------------------------------------------------\n",
+    "    # Split too \"heavy\" neutrons\n",
+    "    numNew = 0\n",
+    "    for iNeutron in range(numNeutrons):\n",
+    "        if weight[iNeutron] > 1:\n",
+    "            # Truncated integer value of the neutron weight\n",
+    "            N = int(np.floor(weight[iNeutron]))\n",
+    "            # Sample the number of split neutrons\n",
+    "            if weight[iNeutron] - N > np.random.rand():\n",
+    "                N += 1\n",
+    "            # Change the weight of the split neutron\n",
+    "            weight[iNeutron] = weight[iNeutron] / N\n",
+    "            # Introduce new neutrons\n",
+    "            for iNew in range(N - 1):\n",
+    "                numNew += 1\n",
+    "                x = np.append(x, x[iNeutron])\n",
+    "                y = np.append(y, y[iNeutron])\n",
+    "                weight = np.append(weight, weight[iNeutron])\n",
+    "                iGroup = np.append(iGroup, iGroup[iNeutron])\n",
+    "\n",
+    "    # Increase the number of neutrons\n",
+    "    numNeutrons += numNew\n",
+    "\n",
+    "    #-------------------------------------------------------------------------------------------\n",
+    "    # k-eff in a cycle equals the total weight of the new generation over\n",
+    "    # the total weight of the old generation (the old generation weight =\n",
+    "    # numNeutronsBorn)\n",
+    "    keff_cycle = np.sum(weight) / np.sum(weight0)\n",
+    "    keff_active_cycle = [0.0] * numCycles_active\n",
+    "\n",
+    "    iActive = iCycle - numCycles_inactive\n",
+    "    if iActive <= 0:\n",
+    "        print('Inactive cycle = {:3d}/{:3d}; k-eff cycle = {:.5f}; numNeutrons = {:3d}'.format(\n",
+    "            iCycle, numCycles_inactive, keff_cycle, numNeutrons))\n",
+    "    else:\n",
+    "        # k-effective of the cycle\n",
+    "        keff_active_cycle[iActive-1] = keff_cycle\n",
+    "\n",
+    "        # k-effective of the problem\n",
+    "        keff_expected[iActive] = np.mean(keff_active_cycle[1:iActive + 1])\n",
+    "\n",
+    "        # Standard deviation of k-effective\n",
+    "        sigma_keff[iActive] = np.sqrt(\n",
+    "            np.sum((keff_active_cycle[1:iActive + 1] - keff_expected[iActive]) ** 2) / max(iActive - 1, 1) / iActive)\n",
+    "\n",
+    "        print('Active cycle = {:3d}/{:3d}; k-eff cycle = {:.5f}; numNeutrons = {:3d}; k-eff expected = {:.5f}; sigma = {:.5f}'.format(\n",
+    "            iCycle - numCycles_inactive, numCycles_active, keff_cycle, numNeutrons, keff_expected[iActive], sigma_keff[iActive]))\n",
+    "\n",
+    "    # End of main (power) iteration\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "39.6051260523968"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'keff_active_cycles' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m keff_active_cycles\u001b[39m.\u001b[39mshape\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'keff_active_cycles' is not defined"
+     ]
     }
    ],
    "source": [
-    "SigTmax[]"
+    "keff_active_cycles.shape"
    ]
   }
  ],
