--- a/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
     "    'B11':  'B_011'\n",
     "    }\n",
     "    # Path to microscopic cross section data:\n",
-    "    micro_XS_path = '../01.Micro_Python'\n",
+    "    micro_XS_path = '../01.Micro.XS.421g'\n",
     "    # Open the HDF5 file based on the element\n",
     "    filename = f\"micro_{elementDict[element]}__{temp}K.h5\"\n",
     "    with h5py.File(micro_XS_path + '/' + filename, 'r') as f:\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -808,13 +808,7 @@
       "File 'micro_U_235__900K.h5' has been read in.\n",
       "File 'micro_U_238__900K.h5' has been read in.\n",
       "File 'micro_O_016__900K.h5' has been read in.\n",
-      "Sigma-zero iterations. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Sigma-zero iterations. \n",
       "Done.\n",
       "Interpolation of microscopic cross sections for the found sigma-zeros.\n",
       "Done.\n",
@@ -852,7 +846,7 @@
     "UO2_03[\"ng\"] = 421\n",
     "\n",
     "# Path to microscopic cross section data:\n",
-    "micro_XS_path = '../01.Micro_Python'  \n",
+    "micro_XS_path = '../01.Micro.XS.421g/'  \n",
     "\n",
     "# Call the functions for UO2 isotopes and store the data in the structures.\n",
     "# As an example it is done below for temperature of 900 K.\n",
@@ -1042,6 +1036,51 @@
     "UO2_03[\"por\"] = por*100\n",
     "UO2_03[\"molEnrich\"] = molEnrich*100\n",
     "\n",
+    "nRows = UO2_03[\"numDen\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"numDen\"][i] = \"%12.5e\" % UO2_03[\"numDen\"][i]\n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"sig0\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        UO2_03[\"sig0\"][i, j] = \"%13.6e\" % UO2_03[\"sig0\"][i, j]\n",
+    "\n",
+    "nRows = UO2_03[\"SigC\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigC\"][i] = \"%13.6e\" % UO2_03[\"SigC\"][i]\n",
+    "\n",
+    "nRows = UO2_03[\"SigL\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigL\"][i] = \"%13.6e\" % UO2_03[\"SigL\"][i]\n",
+    "\n",
+    "nRows = UO2_03[\"SigF\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigF\"][i] = \"%13.6e\" % UO2_03[\"SigF\"][i]\n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"SigP\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        UO2_03[\"SigP\"][i, j] = \"%13.6e\" % UO2_03[\"SigP\"][i, j]    \n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"Sig2\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        UO2_03[\"Sig2\"][i, j] = \"%13.6e\" % UO2_03[\"Sig2\"][i, j]   \n",
+    "\n",
+    "nRows = UO2_03[\"SigT\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigT\"][i] = \"%13.6e\" % UO2_03[\"SigT\"][i]\n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"SigS\"][\"SigS[0]\"].shape\n",
+    "for k in range(len(UO2_03[\"SigS\"].keys())):\n",
+    "    for i in range(num_rows):\n",
+    "        for j in range(num_cols):\n",
+    "            UO2_03[\"SigS\"][f\"SigS[{k}]\"][i, j] = \"%13.6e\" % UO2_03[\"SigS\"][f\"SigS[{k}]\"][i, j]  \n",
+    "\n",
+    "nRows = UO2_03[\"chi\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"chi\"][i] = \"%13.6e\" % UO2_03[\"chi\"][i]\n",
+    "\n",
     "# Finally create the file with macroscopic cross sections\n",
     "writeMacroXS(UO2_03, matName)\n",
     "\n",
@@ -1049,6 +1088,86 @@
     "hdf5_U235.close()\n",
     "hdf5_U238.close()\n",
     "hdf5_O16.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ng', 'temp', 'eg', 'aw', 'den', 'isoName', 'numDen', 'sig0', 'SigC', 'SigL', 'SigF', 'SigP', 'Sig2', 'SigT', 'SigS', 'chi', 'por', 'molEnrich'])\n",
+      "(1, 421)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(UO2_03.keys())\n",
+    "print(UO2_03[\"SigF\"].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nRows = UO2_03[\"numDen\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"numDen\"][i] = \"%12.5e\" % UO2_03[\"numDen\"][i]\n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"sig0\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        UO2_03[\"sig0\"][i, j] = \"%13.6e\" % UO2_03[\"sig0\"][i, j]\n",
+    "\n",
+    "nRows = UO2_03[\"SigC\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigC\"][i] = \"%13.6e\" % UO2_03[\"SigC\"][i]\n",
+    "\n",
+    "nRows = UO2_03[\"SigL\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigL\"][i] = \"%13.6e\" % UO2_03[\"SigL\"][i]\n",
+    "\n",
+    "nRows = UO2_03[\"SigF\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigF\"][i] = \"%13.6e\" % UO2_03[\"SigF\"][i]\n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"SigP\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        UO2_03[\"SigP\"][i, j] = \"%13.6e\" % UO2_03[\"SigP\"][i, j]    \n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"Sig2\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        UO2_03[\"Sig2\"][i, j] = \"%13.6e\" % UO2_03[\"Sig2\"][i, j]   \n",
+    "\n",
+    "nRows = UO2_03[\"SigT\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"SigT\"][i] = \"%13.6e\" % UO2_03[\"SigT\"][i]\n",
+    "\n",
+    "num_rows, num_cols = UO2_03[\"SigS\"][\"SigS[0]\"].shape\n",
+    "for k in range(len(UO2_03[\"SigS\"].keys())):\n",
+    "    for i in range(num_rows):\n",
+    "        for j in range(num_cols):\n",
+    "            UO2_03[\"SigS\"][f\"SigS[{k}]\"][i, j] = \"%13.6e\" % UO2_03[\"SigS\"][f\"SigS[{k}]\"][i, j]  \n",
+    "\n",
+    "nRows = UO2_03[\"chi\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    UO2_03[\"chi\"][i] = \"%13.6e\" % UO2_03[\"chi\"][i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans = UO2_03[\"SigS\"][\"SigS[0]\"]"
    ]
   },
   {
@@ -1105,7 +1224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
